Added `graph_out` output for ingestion in `graph-node`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,13 @@ name = "substreams"
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1"
 prost = "0.11"
 prost-types = "0.11"
-substreams = "0.3.2"
-substreams-ethereum = "0.6.2"
+substreams = "0.4.0"
+substreams-entity-change = "0.2.1"
+substreams-ethereum = "0.7.0"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
-
-# # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
-# [target.wasm32-unknown-unknown.dependencies]
-# getrandom = { version = "0.2", features = ["custom"] }
-
-# [build-dependencies]
-# anyhow = "1"
-# substreams-ethereum = "0.6.2"
 
 [profile.release]
 lto = true
