--- a/substreams.yaml
+++ b/substreams.yaml
@@ -3,6 +3,9 @@ package:
   name: "substreams_eth_block_meta"
   version: v0.1.0
 
+imports:
+  entities_change: https://github.com/streamingfast/substreams-entity-change/releases/download/v0.2.0/substreams-entity-change-v0.2.0.spkg
+
 protobuf:
   files:
     - block_meta.proto
@@ -17,7 +20,6 @@ binaries:
 modules:
   - name: store_block_meta_start
     kind: store
-    initialBlock: 0
     updatePolicy: set_if_not_exists
     valueType: proto:eth.block_meta.v1.BlockMeta
     inputs:
@@ -25,8 +27,17 @@ modules:
 
   - name: store_block_meta_end
     kind: store
-    initialBlock: 0
     updatePolicy: set
     valueType: proto:eth.block_meta.v1.BlockMeta
     inputs:
       - source: sf.ethereum.type.v2.Block
+
+  - name: graph_out
+    kind: map
+    inputs:
+      - store: store_block_meta_start
+        mode: deltas
+      - store: store_block_meta_end
+        mode: deltas
+    output:
+      type: proto:substreams.entity.v1.EntityChanges
