Updated to show case `db_out` example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1"
 prost = "0.11"
 prost-types = "0.11"
 substreams = "0.4.0"
+substreams-database-change = "0.1.0"
 substreams-entity-change = "0.2.1"
 substreams-ethereum = "0.7.0"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
