--- a/substreams.yaml
+++ b/substreams.yaml
@@ -4,6 +4,7 @@ package:
   version: v0.1.0
 
 imports:
+  database_change: https://github.com/streamingfast/substreams-database-change/releases/download/v0.1.0/substreams-database-change-v0.1.0.spkg
   entities_change: https://github.com/streamingfast/substreams-entity-change/releases/download/v0.2.0/substreams-entity-change-v0.2.0.spkg
 
 protobuf:
@@ -31,6 +32,17 @@ modules:
     valueType: proto:eth.block_meta.v1.BlockMeta
     inputs:
       - source: sf.ethereum.type.v2.Block
+
+  - name: db_out
+    kind: map
+    inputs:
+      - store: store_block_meta_start
+        mode: deltas
+      - store: store_block_meta_end
+        mode: deltas
+    output:
+      type: proto:substreams.database.v1.DatabaseChanges
+
 
   - name: graph_out
     kind: map
