--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ prost-types = "0.11"
 substreams = "0.5.0"
 substreams-database-change = "0.2.0"
 substreams-entity-change = "0.3.0"
+substreams-sink-kv = { path = "/Users/stepd/repos/substreams-sink-kv" }
 substreams-ethereum = "0.8.0"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
 
