--- a/substreams.yaml
+++ b/substreams.yaml
@@ -43,6 +43,15 @@ modules:
     output:
       type: proto:substreams.database.v1.DatabaseChanges
 
+  - name: kv_out
+    kind: map
+    inputs:
+      - store: store_block_meta_start
+        mode: deltas
+      - store: store_block_meta_end
+        mode: deltas
+    output:
+      type: proto:substreams.kv.v1.KVOperations
 
   - name: graph_out
     kind: map
