--- a/substreams.yaml
+++ b/substreams.yaml
@@ -41,7 +41,7 @@ modules:
       - store: store_block_meta_end
         mode: deltas
     output:
-      type: proto:sf.substreams.database.v1.DatabaseChanges
+      type: proto:sf.substreams.sink.database.v1.DatabaseChanges
 
   - name: kv_out
     kind: map
