--- a/substreams.yaml
+++ b/substreams.yaml
@@ -4,8 +4,9 @@ package:
   version: v0.4.3
 
 imports:
-  database_change: https://github.com/streamingfast/substreams-database-change/releases/download/v1.1.1/substreams-database-change-v1.1.1.spkg
+  database_change: https://github.com/streamingfast/substreams-database-change/releases/download/v1.1.3/substreams-database-change-v1.1.3.spkg
   entities_change: https://github.com/streamingfast/substreams-entity-change/releases/download/v1.2.1/substreams-entity-change-v1.2.1.spkg
+  kv_operations: https://github.com/streamingfast/substreams-sink-kv/releases/download/v2.1.5/substreams-sink-kv-v2.1.5.spkg
 
 protobuf:
   files:
