--- a/substreams.yaml
+++ b/substreams.yaml
@@ -4,8 +4,8 @@ package:
   version: v0.4.3
 
 imports:
-  database_change: https://github.com/streamingfast/substreams-database-change/releases/download/v1.1.3/substreams-database-change-v1.1.3.spkg
-  entities_change: https://github.com/streamingfast/substreams-entity-change/releases/download/v1.2.1/substreams-entity-change-v1.2.1.spkg
+  database_change: https://github.com/streamingfast/substreams-sink-database-changes/releases/download/v1.2.0/substreams-database-change-v1.2.0.spkg
+  entities_change: https://github.com/streamingfast/substreams-sink-entity-changes/releases/download/v1.3.0/substreams-sink-entity-changes-v1.3.0.spkg
   kv_operations: https://github.com/streamingfast/substreams-sink-kv/releases/download/v2.1.5/substreams-sink-kv-v2.1.5.spkg
 
 protobuf:
@@ -62,4 +62,4 @@ modules:
       - store: store_block_meta_end
         mode: deltas
     output:
-      type: proto:sf.substreams.entity.v1.EntityChanges
+      type: proto:sf.substreams.sink.entity.v1.EntityChanges
